fixed z-index issue for user options popup

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -16,6 +16,7 @@
 /* MIDDLE  */
 .home-page-middle {
   grid-column: span 2;
+  z-index: -1;
 }
 .middle-nav {
   position: sticky;
